@@ -1,12 +1,16 @@
 package br.com.persist.assistencia;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 public class Base64Util {
 	private Base64Util() {
 	}
 
 	public static String criarBase64(String string) {
-		return DatatypeConverter.printBase64Binary(string.getBytes());
+		return Base64.getEncoder().encodeToString(string.getBytes());
+	}
+
+	public static String criarNomeArquivo(String string) {
+		return Base64.getUrlEncoder().encodeToString(string.getBytes());
 	}
 }
